<resources>
    <string name="app_name">Bravo!</string>
    <string name="label_teams">Teams</string>
    <string name="label_league">Leagues</string>
    <string name="label_refresh">Tap to reload</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <array name="id_league">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </array>

    <array name="league_logo">
        <item>https://www.thesportsdb.com/images/media/league/badge/i6o0kh1549879062.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/m7urjx1535732496.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/0j55yv1534764799.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/ocy2fe1566216901.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/8f5jmf1516458074.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/7onmyv1534768460.png</item>
    </array>

    <string name="label_last_match">Last Match</string>
    <string name="label_next_match">Next Match</string>
    <string name="label_search">Search</string>
    <string name="label_separate_score">:</string>
    <string name="label_format_time">HH:mm</string>

    <string name="label_data_not_found">Data Not Found</string>
    <string name="label_statistic">Statistic</string>
    <string name="label_lineup">Lineup</string>
    <string name="label_goals">Goals</string>
    <string name="label_red_cards">Red Cards</string>
    <string name="label_yellow_cards">Yellow Cards</string>
    <string name="label_shots">Shots</string>
    <string name="label_defender">Defenders</string>
    <string name="label_midfielders">MidFielders</string>
    <string name="label_forwards">Forwards</string>
    <string name="label_substitutes">Substitutes</string>
    <string name="label_goalkeeper">Goalkeeper</string>
    <string name="label_soccer">Soccer</string>
    <string name="label_teams_and_league">Teams And League</string>
    <string name="favorites_match">Favorites Match</string>
    <string name="label_success_to_add">Success to add this match to favorite</string>
    <string name="label_success_to_remove">Success to remove data from favorite</string>

    <string name="label_standings">Standings</string>
    <string name="label_desc">Description</string>
    <string name="label_squad">Squad</string>
    <string name="label_next"><![CDATA[>]]></string>
    <string name="label_name">Name</string>
    <string name="label_nationality">Nationality</string>
    <string name="label_team">Team</string>
    <string name="label_date_born">Date Born</string>
    <string name="label_position">Position</string>
    <string name="label_number">Number</string>
    <string name="label_date_signed">Date Signed</string>
    <string name="label_signing">Signing</string>
    <string name="label_wage">Wage</string>
    <string name="label_agent">Agent</string>
    <string name="label_birth_location">Birth Location</string>
    <string name="label_description">Description</string>
    <string name="label_personal_info">Personal Info</string>
    <string name="label_played">P</string>
    <string name="label_goals_difference">+/-</string>
    <string name="label_points">PTS</string>
    <string name="label_match">Match</string>

</resources>
